[package]
name = "solana-bruteforce"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
thiserror = "2.0.11"
clap = { version = "4.5", features = ["derive", "cargo"] }
log = "0.4.25"

solana-sdk = "2.1.10"
solana-accounts-db = "2.1.10"


crossbeam-channel = "0.5.14"
serde = "1.0.217"
bincode = "1.3.3"
serde_with = "3.12.0"
env_logger = "0.11.6"
memmap2 = "0.9.5"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
] }
rayon = "1.10.0"
num_cpus = "1.16.0"
futures = "0.3.31"
config = "0.15.6"
